update Buffer pulled from serialization

--- a/Chat Program/Chat Program/Chat Program.vcxproj
+++ b/Chat Program/Chat Program/Chat Program.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cBuffer.h" />
+    <ClInclude Include="cProtocol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
