--- a/Chat Program/Chat Program/Chat Program.vcxproj.filters
+++ b/Chat Program/Chat Program/Chat Program.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="cBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cProtocol.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
