removed protobuf from client, auth server skeleton (lib issue)

--- a/Chat Program/Authentication Server/Authentication Server.vcxproj.filters
+++ b/Chat Program/Authentication Server/Authentication Server.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main_client.cpp">
+    <ClCompile Include="auth_server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="addressbook.pb.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="addressbook.pb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
