Revised protobuffers - changed on servers

--- a/Chat Program/Authentication Server/Authentication Server.vcxproj
+++ b/Chat Program/Authentication Server/Authentication Server.vcxproj
@@ -135,11 +135,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="addressbook.pb.cc" />
+    <ClCompile Include="AuthWebService.pb.cc" />
     <ClCompile Include="auth_server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="addressbook.pb.h" />
+    <ClInclude Include="AuthWebService.pb.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
