--- a/Chat Program/Server/Server.vcxproj
+++ b/Chat Program/Server/Server.vcxproj
@@ -150,11 +150,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="addressbook.pb.cc" />
+    <ClCompile Include="AuthWebService.pb.cc" />
     <ClCompile Include="main_server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="addressbook.pb.h" />
+    <ClInclude Include="AuthWebService.pb.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
